added yeet's fic

--- a/index.html
+++ b/index.html
@@ -675,6 +675,28 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-lg-4" data-filter="sylwii post OC">
+                        <div class="card text-center mb-4">
+                            <a class="text-decoration-none text-reset"
+                               href="https://docs.google.com/document/d/1H55bTEgcAAjkKAIJh3lm0Rw0G7yuzbiMVfHHn-Q7yQ4/edit"
+                               target="_blank"><h5
+                                    class="fw-semibold card-header">The other side</h5>
+                            </a>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">by @yeet_.</li>
+                                <li class="list-group-item text-start">“You’re so pretty as a girl Sylvain!!” Cherry
+                                    cries out. Surely the entire infirmary heard their declaration, but Sylvain is more
+                                    surprised by the words themselves than their volume. It sounded like something they
+                                    had been waiting to say for a while. Cherry crawls over to her and starts inspecting
+                                    her like they would a doll at the market. They scrutinize her eyes, their lashes,
+                                    her now soft hands and their nails, among other things.
+                                </li>
+                            </ul>
+                            <div class="card-footer">
+                                <span class="fw-bold">tags:</span> sylwii / light-hearted / OC interactions
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane fade p-4 pt-5" id="bonds" role="tabpanel" tabindex="0">
